@@ -17,12 +17,16 @@
  */
 package org.wso2.ballerinalang.compiler.semantics.model;
 
+import io.ballerina.tools.diagnostics.Location;
 import org.ballerinalang.model.TreeBuilder;
 import org.ballerinalang.model.elements.PackageID;
 import org.ballerinalang.model.symbols.SymbolOrigin;
 import org.ballerinalang.model.tree.OperatorKind;
+import org.ballerinalang.model.types.SelectivelyImmutableReferenceType;
 import org.ballerinalang.model.types.TypeKind;
+import org.wso2.ballerinalang.compiler.diagnostic.BLangDiagnosticLocation;
 import org.wso2.ballerinalang.compiler.semantics.model.symbols.BConstructorSymbol;
+import org.wso2.ballerinalang.compiler.semantics.model.symbols.BErrorTypeSymbol;
 import org.wso2.ballerinalang.compiler.semantics.model.symbols.BOperatorSymbol;
 import org.wso2.ballerinalang.compiler.semantics.model.symbols.BPackageSymbol;
 import org.wso2.ballerinalang.compiler.semantics.model.symbols.BSymbol;
@@ -37,6 +41,7 @@ import org.wso2.ballerinalang.compiler.semantics.model.types.BFiniteType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BFutureType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BHandleType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BIntSubType;
+import org.wso2.ballerinalang.compiler.semantics.model.types.BIntersectionType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BInvokableType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BJSONType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BMapType;
@@ -46,7 +51,6 @@ import org.wso2.ballerinalang.compiler.semantics.model.types.BNoType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BObjectType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BReadonlyType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BRecordType;
-import org.wso2.ballerinalang.compiler.semantics.model.types.BServiceType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BStreamType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BStringSubType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BTableType;
@@ -57,18 +61,15 @@ import org.wso2.ballerinalang.compiler.semantics.model.types.BUnionType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BXMLSubType;
 import org.wso2.ballerinalang.compiler.semantics.model.types.BXMLType;
 import org.wso2.ballerinalang.compiler.tree.BLangPackage;
-import org.wso2.ballerinalang.compiler.tree.expressions.BLangExpression;
 import org.wso2.ballerinalang.compiler.tree.expressions.BLangLiteral;
 import org.wso2.ballerinalang.compiler.util.CompilerContext;
+import org.wso2.ballerinalang.compiler.util.ImmutableTypeCloner;
 import org.wso2.ballerinalang.compiler.util.Name;
 import org.wso2.ballerinalang.compiler.util.Names;
 import org.wso2.ballerinalang.compiler.util.TypeTags;
-import org.wso2.ballerinalang.compiler.util.diagnotic.BDiagnosticSource;
-import org.wso2.ballerinalang.compiler.util.diagnotic.DiagnosticPos;
 import org.wso2.ballerinalang.util.Flags;
 import org.wso2.ballerinalang.util.Lists;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -100,7 +101,7 @@ public class SymbolTable {
     public static final Integer UNSIGNED16_MAX_VALUE = 65535;
     public static final Integer UNSIGNED8_MAX_VALUE = 255;
 
-    public final DiagnosticPos builtinPos;
+    public final Location builtinPos;
     public final BLangPackage rootPkgNode;
     public final BPackageSymbol rootPkgSymbol;
     public final BSymbol notFoundSymbol;
@@ -115,37 +116,31 @@ public class SymbolTable {
     public final BType decimalType = new BType(TypeTags.DECIMAL, null, Flags.READONLY);
     public final BType stringType = new BType(TypeTags.STRING, null, Flags.READONLY);
     public final BType booleanType = new BType(TypeTags.BOOLEAN, null, Flags.READONLY);
-    public final BType jsonType = new BJSONType(TypeTags.JSON, null);
+
     public final BType anyType = new BAnyType(TypeTags.ANY, null);
-    public final BType anydataType = new BAnydataType(TypeTags.ANYDATA, null);
     public final BMapType mapType = new BMapType(TypeTags.MAP, anyType, null);
     public final BMapType mapStringType = new BMapType(TypeTags.MAP, stringType, null);
-    public final BMapType mapAnydataType = new BMapType(TypeTags.MAP, anydataType, null);
-    public final BMapType mapJsonType = new BMapType(TypeTags.MAP, jsonType, null);
+
     public final BFutureType futureType = new BFutureType(TypeTags.FUTURE, nilType, null);
     public final BArrayType arrayType = new BArrayType(anyType);
     public final BArrayType arrayStringType = new BArrayType(stringType);
-    public final BArrayType arrayAnydataType = new BArrayType(anydataType);
-    public final BArrayType arrayJsonType = new BArrayType(jsonType);
+
     public final BType tupleType = new BTupleType(Lists.of(noType));
     public final BType recordType = new BRecordType(null);
     public final BType stringArrayType = new BArrayType(stringType);
-    public final BType jsonArrayType = new BArrayType(jsonType);
-    public final BType anydataArrayType = new BArrayType(anydataType);
-    public final BType anyServiceType = new BServiceType(null);
     public final BType handleType = new BHandleType(TypeTags.HANDLE, null);
     public final BTypedescType typeDesc = new BTypedescType(this.anyType, null);
     public final BType readonlyType = new BReadonlyType(TypeTags.READONLY, null);
-    public final BType anydataOrReadonly = BUnionType.create(null, anydataType, readonlyType);
+    public final BType pathParamAllowedType = BUnionType.create(null,
+            intType, stringType, floatType, booleanType, decimalType);
+    public final BIntersectionType anyAndReadonly;
+    public BUnionType anyAndReadonlyOrError;
+
+    public final BType errorIntersectionType = new BErrorType(null, null);
 
     public final BType semanticError = new BType(TypeTags.SEMANTIC_ERROR, null);
     public final BType nullSet = new BType(TypeTags.NULL_SET, null);
-    public final BUnionType anydataOrReadOnlyType = BUnionType.create(null, anydataType, readonlyType);
 
-    public BType streamType = new BStreamType(TypeTags.STREAM, anydataType, null, null);
-    public BType tableType = new BTableType(TypeTags.TABLE, anydataType, null);
-    public BMapType detailType = new BMapType(TypeTags.MAP, anydataOrReadonly, null);
-    public BErrorType errorType = new BErrorType(null, detailType);
     public BConstructorSymbol errorConstructor;
     public BUnionType anyOrErrorType;
     public BUnionType pureType;
@@ -168,13 +163,31 @@ public class SymbolTable {
     public final BXMLSubType xmlPIType = new BXMLSubType(TypeTags.XML_PI, Names.XML_PI);
     public final BXMLSubType xmlCommentType = new BXMLSubType(TypeTags.XML_COMMENT, Names.XML_COMMENT);
     public final BXMLSubType xmlTextType = new BXMLSubType(TypeTags.XML_TEXT, Names.XML_TEXT, Flags.READONLY);
+    public final BType xmlNeverType = new BXMLType(neverType,  null, Flags.READONLY);
 
     public final BType xmlType = new BXMLType(BUnionType.create(null, xmlElementType, xmlCommentType,
             xmlPIType, xmlTextType),  null);
 
+    public BAnydataType anydataType;
+    public BArrayType arrayAnydataType;
+    public BMapType mapAnydataType;
+    public BType anydataOrReadonly;
+    public BType streamType;
+    public BType tableType;
+
+    public BArrayType arrayJsonType;
+    public BMapType mapJsonType;
+    public BJSONType jsonType;
+
+    public BUnionType cloneableType;
+    public BMapType detailType;
+    public BErrorType errorType;
+
     public BPackageSymbol langInternalModuleSymbol;
     public BPackageSymbol langAnnotationModuleSymbol;
+    public BPackageSymbol langJavaModuleSymbol;
     public BPackageSymbol langArrayModuleSymbol;
+    public BPackageSymbol langConfigModuleSymbol;
     public BPackageSymbol langDecimalModuleSymbol;
     public BPackageSymbol langErrorModuleSymbol;
     public BPackageSymbol langFloatModuleSymbol;
@@ -190,7 +203,9 @@ public class SymbolTable {
     public BPackageSymbol langXmlModuleSymbol;
     public BPackageSymbol langBooleanModuleSymbol;
     public BPackageSymbol langQueryModuleSymbol;
+    public BPackageSymbol langRuntimeModuleSymbol;
     public BPackageSymbol langTransactionModuleSymbol;
+    public BPackageSymbol internalTransactionModuleSymbol;
 
     private Names names;
     public Map<BPackageSymbol, SymbolEnv> pkgEnvMap = new HashMap<>();
@@ -212,8 +227,8 @@ public class SymbolTable {
 
         this.rootPkgNode = (BLangPackage) TreeBuilder.createPackageNode();
         this.rootPkgSymbol = new BPackageSymbol(PackageID.ANNOTATIONS, null, null, BUILTIN);
-        this.builtinPos = new DiagnosticPos(new BDiagnosticSource(rootPkgSymbol.pkgID, Names.EMPTY.value), 0, 0,
-                                            0, 0);
+        this.builtinPos = new BLangDiagnosticLocation(Names.EMPTY.value, -1, -1,
+                                            -1, -1);
         this.rootPkgNode.pos = this.builtinPos;
         this.rootPkgNode.symbol = this.rootPkgSymbol;
         this.rootScope = new Scope(rootPkgSymbol);
@@ -229,19 +244,13 @@ public class SymbolTable {
         initializeType(decimalType, TypeKind.DECIMAL.typeName(), BUILTIN);
         initializeType(stringType, TypeKind.STRING.typeName(), BUILTIN);
         initializeType(booleanType, TypeKind.BOOLEAN.typeName(), BUILTIN);
-        initializeType(jsonType, TypeKind.JSON.typeName(), BUILTIN);
         initializeType(xmlType, TypeKind.XML.typeName(), BUILTIN);
-        initializeType(streamType, TypeKind.STREAM.typeName(), BUILTIN);
-        initializeType(tableType, TypeKind.TABLE.typeName(), BUILTIN);
         initializeType(mapType, TypeKind.MAP.typeName(), VIRTUAL);
         initializeType(mapStringType, TypeKind.MAP.typeName(), VIRTUAL);
-        initializeType(mapAnydataType, TypeKind.MAP.typeName(), VIRTUAL);
         initializeType(futureType, TypeKind.FUTURE.typeName(), BUILTIN);
         initializeType(anyType, TypeKind.ANY.typeName(), BUILTIN);
-        initializeType(anydataType, TypeKind.ANYDATA.typeName(), BUILTIN);
         initializeType(nilType, TypeKind.NIL.typeName(), BUILTIN);
         initializeType(neverType, TypeKind.NEVER.typeName(), BUILTIN);
-        initializeType(anyServiceType, TypeKind.SERVICE.typeName(), BUILTIN);
         initializeType(handleType, TypeKind.HANDLE.typeName(), BUILTIN);
         initializeType(typeDesc, TypeKind.TYPEDESC.typeName(), BUILTIN);
         initializeType(readonlyType, TypeKind.READONLY.typeName(), BUILTIN);
@@ -263,13 +272,25 @@ public class SymbolTable {
         trueLiteral.type = this.booleanType;
         trueLiteral.value = Boolean.TRUE;
 
+        defineCyclicUnionBasedInternalTypes();
+
         BTypeSymbol finiteTypeSymbol = Symbols.createTypeSymbol(SymTag.FINITE_TYPE, Flags.PUBLIC,
                                                                 names.fromString("$anonType$TRUE"),
                                                                 rootPkgNode.packageID, null, rootPkgNode.symbol.owner,
                                                                 this.builtinPos, VIRTUAL);
-        this.trueType = new BFiniteType(finiteTypeSymbol, new HashSet<BLangExpression>() {{
+        this.trueType = new BFiniteType(finiteTypeSymbol, new HashSet<>() {{
             add(trueLiteral);
         }});
+        this.anyAndReadonly =
+                ImmutableTypeCloner.getImmutableIntersectionType((SelectivelyImmutableReferenceType) this.anyType,
+                        this, names);
+        initializeType(this.anyAndReadonly, this.anyAndReadonly.effectiveType.name.getValue(), BUILTIN);
+
+        defineReadonlyCompoundType();
+    }
+
+    private void defineReadonlyCompoundType() {
+        anyAndReadonlyOrError = BUnionType.create(null, anyAndReadonly, errorType);
     }
 
     public BType getTypeFromTag(int tag) {
@@ -357,25 +378,23 @@ public class SymbolTable {
     }
 
     public void loadPredeclaredModules() {
-        Map<Name, BPackageSymbol> modules = new HashMap<>();
-        modules.put(Names.BOOLEAN, this.langBooleanModuleSymbol);
-        modules.put(Names.DECIMAL, this.langDecimalModuleSymbol);
-        modules.put(Names.ERROR, this.langErrorModuleSymbol);
-        modules.put(Names.FLOAT, this.langFloatModuleSymbol);
-        modules.put(Names.FUTURE, this.langFutureModuleSymbol);
-        modules.put(Names.INT, this.langIntModuleSymbol);
-        modules.put(Names.MAP, this.langMapModuleSymbol);
-        modules.put(Names.OBJECT, this.langObjectModuleSymbol);
-        modules.put(Names.STREAM, this.langStreamModuleSymbol);
-        modules.put(Names.STRING, this.langStringModuleSymbol);
-        modules.put(Names.TABLE, this.langTableModuleSymbol);
-        modules.put(Names.TYPEDESC, this.langTypedescModuleSymbol);
-        modules.put(Names.XML, this.langXmlModuleSymbol);
-
-        this.predeclaredModules = Collections.unmodifiableMap(modules);
+        this.predeclaredModules = Map.ofEntries(Map.entry(Names.BOOLEAN, this.langBooleanModuleSymbol),
+                                                Map.entry(Names.DECIMAL, this.langDecimalModuleSymbol),
+                                                Map.entry(Names.ERROR, this.langErrorModuleSymbol),
+                                                Map.entry(Names.FLOAT, this.langFloatModuleSymbol),
+                                                Map.entry(Names.FUTURE, this.langFutureModuleSymbol),
+                                                Map.entry(Names.INT, this.langIntModuleSymbol),
+                                                Map.entry(Names.MAP, this.langMapModuleSymbol),
+                                                Map.entry(Names.OBJECT, this.langObjectModuleSymbol),
+                                                Map.entry(Names.STREAM, this.langStreamModuleSymbol),
+                                                Map.entry(Names.STRING, this.langStringModuleSymbol),
+                                                Map.entry(Names.TABLE, this.langTableModuleSymbol),
+                                                Map.entry(Names.TRANSACTION, this.langTransactionModuleSymbol),
+                                                Map.entry(Names.TYPEDESC, this.langTypedescModuleSymbol),
+                                                Map.entry(Names.XML, this.langXmlModuleSymbol));
     }
 
-    private void initializeType(BType type, String name, SymbolOrigin origin) {
+    public void initializeType(BType type, String name, SymbolOrigin origin) {
         initializeType(type, names.fromString(name), origin);
     }
 
@@ -392,6 +411,32 @@ public class SymbolTable {
     private void defineType(BType type, BTypeSymbol tSymbol) {
         type.tsymbol = tSymbol;
         rootScope.define(tSymbol.name, tSymbol);
+    }
+
+    public void updateBuiltinSubtypeOwners() {
+        updateIntSubtypeOwners();
+        updateStringSubtypeOwners();
+        updateXMLSubtypeOwners();
+    }
+
+    public void updateIntSubtypeOwners() {
+        this.signed8IntType.tsymbol.owner = this.langIntModuleSymbol;
+        this.unsigned8IntType.tsymbol.owner = this.langIntModuleSymbol;
+        this.signed16IntType.tsymbol.owner = this.langIntModuleSymbol;
+        this.unsigned16IntType.tsymbol.owner = this.langIntModuleSymbol;
+        this.signed32IntType.tsymbol.owner = this.langIntModuleSymbol;
+        this.unsigned32IntType.tsymbol.owner = this.langIntModuleSymbol;
+    }
+
+    public void updateStringSubtypeOwners() {
+        this.charStringType.tsymbol.owner = this.langStringModuleSymbol;
+    }
+
+    public void updateXMLSubtypeOwners() {
+        this.xmlElementType.tsymbol.owner = this.langXmlModuleSymbol;
+        this.xmlCommentType.tsymbol.owner = this.langXmlModuleSymbol;
+        this.xmlPIType.tsymbol.owner = this.langXmlModuleSymbol;
+        this.xmlTextType.tsymbol.owner = this.langXmlModuleSymbol;
     }
 
     public void defineOperators() {
@@ -722,5 +767,81 @@ public class SymbolTable {
         BOperatorSymbol symbol = new BOperatorSymbol(name, rootPkgSymbol.pkgID, opType, rootPkgSymbol, this.builtinPos,
                                                      BUILTIN);
         rootScope.define(name, symbol);
+    }
+
+    private void defineCyclicUnionBasedInternalTypes() {
+        defineAnydataCyclicTypeAndDependentTypes();
+        defineJsonCyclicTypeAndDependentTypes();
+        defineCloneableCyclicTypeAndDependentTypes();
+    }
+
+    private void defineCloneableCyclicTypeAndDependentTypes() {
+        cloneableType = BUnionType.create(null, readonlyType, xmlType);
+        addCyclicArrayMapTableOfMapMembers(cloneableType);
+
+        cloneableType.tsymbol = new BTypeSymbol(SymTag.TYPE, Flags.PUBLIC, Names.CLONEABLE, rootPkgSymbol.pkgID,
+                cloneableType, rootPkgSymbol, builtinPos, BUILTIN);
+
+        detailType = new BMapType(TypeTags.MAP, cloneableType, null);
+        errorType = new BErrorType(null, detailType);
+        errorType.tsymbol = new BErrorTypeSymbol(SymTag.ERROR, Flags.PUBLIC, Names.ERROR,
+                rootPkgSymbol.pkgID, errorType, rootPkgSymbol, builtinPos, BUILTIN);
+
+        errorOrNilType = BUnionType.create(null, errorType, nilType);
+        anyOrErrorType = BUnionType.create(null, anyType, errorType);
+
+        mapAllType = new BMapType(TypeTags.MAP, anyOrErrorType, null);
+        arrayAllType = new BArrayType(anyOrErrorType);
+        typeDesc.constraint = anyOrErrorType;
+        futureType.constraint = anyOrErrorType;
+
+        pureType = BUnionType.create(null, anydataType, errorType);
+        streamType = new BStreamType(TypeTags.STREAM, pureType, neverType, null);
+        tableType = new BTableType(TypeTags.TABLE, pureType, null);
+
+        initializeType(streamType, TypeKind.STREAM.typeName(), BUILTIN);
+        initializeType(tableType, TypeKind.TABLE.typeName(), BUILTIN);
+    }
+
+    private void addCyclicArrayMapTableOfMapMembers(BUnionType unionType) {
+        BArrayType arrayCloneableType = new BArrayType(unionType);
+        BMapType mapCloneableType = new BMapType(TypeTags.MAP, unionType, null);
+        BType tableMapCloneableType = new BTableType(TypeTags.TABLE, mapCloneableType, null);
+        unionType.add(arrayCloneableType);
+        unionType.add(mapCloneableType);
+        unionType.add(tableMapCloneableType);
+        unionType.isCyclic = true;
+    }
+
+    private void defineJsonCyclicTypeAndDependentTypes() {
+        BUnionType jsonInternal = BUnionType.create(null, nilType, booleanType, intType, floatType, decimalType,
+                stringType);
+        BArrayType arrayJsonTypeInternal = new BArrayType(jsonInternal);
+        BMapType mapJsonTypeInternal = new BMapType(TypeTags.MAP, jsonInternal, null);
+        jsonInternal.add(arrayJsonTypeInternal);
+        jsonInternal.add(mapJsonTypeInternal);
+        jsonInternal.isCyclic = true;
+
+        jsonType = new BJSONType(jsonInternal);
+        jsonType.tsymbol = new BTypeSymbol(SymTag.TYPE, Flags.PUBLIC, Names.JSON, rootPkgSymbol.pkgID, jsonType,
+                rootPkgSymbol, builtinPos, BUILTIN);
+
+        arrayJsonType = new BArrayType(jsonType);
+        mapJsonType = new BMapType(TypeTags.MAP, jsonType, null);
+    }
+
+    private void defineAnydataCyclicTypeAndDependentTypes() {
+        BUnionType anyDataInternal = BUnionType.create(null, nilType, booleanType, intType, floatType, decimalType,
+                stringType, xmlType);
+        addCyclicArrayMapTableOfMapMembers(anyDataInternal);
+
+        anydataType = new BAnydataType(anyDataInternal);
+        anydataType.tsymbol = new BTypeSymbol(SymTag.TYPE, Flags.PUBLIC, Names.ANYDATA, rootPkgSymbol.pkgID,
+                anydataType, rootPkgSymbol, builtinPos, BUILTIN);
+        arrayAnydataType = new BArrayType(anydataType);
+        mapAnydataType = new BMapType(TypeTags.MAP, anydataType, null);
+        anydataOrReadonly = BUnionType.create(null, anydataType, readonlyType);
+
+        initializeType(mapAnydataType, TypeKind.MAP.typeName(), VIRTUAL);
     }
 }
